<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/cal_remain"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textview1" android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"/>
    <TextView
            android:layout_width="99dp"
            android:layout_height="45dp"
            android:id="@+id/textView2" android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp" android:textSize="25sp"/>
    <TextView
            android:text="@string/cal_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="25sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="120dp"/>
    <TextView
            android:layout_width="81dp"
            android:layout_height="32dp"
            android:id="@+id/textView4" android:textSize="25sp" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="120dp"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="456dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="113dp" android:id="@+id/listView"/>
    <Button
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_reset"
            android:layout_width="91dp"
            android:layout_height="47dp"
            android:id="@+id/button2" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="36dp"
    />
    <Button
            android:text="@string/btn_clear"
            android:layout_width="106dp"
            android:layout_height="49dp"
            android:id="@+id/button3"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
            android:layout_marginLeft="25dp" android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/button1"
    />

</android.support.constraint.ConstraintLayout>