<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <TextView
            android:text="@string/add_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="136dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="122dp"
            android:layout_marginRight="122dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="123dp" android:layout_marginStart="123dp"
            app:layout_constraintHorizontal_bias="0.527"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="98dp"
            android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" android:layout_marginTop="77dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/enter_name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="98dp"
            android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/editText1" android:hint="@string/enter_cal"
            android:inputType="number"/>
    <Button
            android:text="@string/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="168dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="161dp"
            android:layout_marginStart="161dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp" android:layout_marginRight="162dp"
            app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>